<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".MainActivity3">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="clip_horizontal|center_horizontal"
        android:text="@string/_10_09"
        android:translationX="65dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="65dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="17dp"
        android:layout_height="17dp"
        android:contentDescription="@string/ukukk"
        app:srcCompat="@android:drawable/ic_menu_close_clear_cancel"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="7dp"
        tools:layout_editor_absoluteY="2dp" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="19dp"
        android:layout_height="20dp"
        app:srcCompat="@mipmap/ic_borsch"
        tools:layout_editor_absoluteX="67dp"
        tools:layout_editor_absoluteY="19dp"
        tools:ignore="MissingConstraints"
        android:contentDescription="@string/wriur" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_borsch"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="94dp"
        tools:layout_editor_absoluteY="19dp" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="199dp"
        android:layout_height="274dp"
        app:srcCompat="@mipmap/borsch"
        tools:layout_editor_absoluteX="-2dp"
        tools:layout_editor_absoluteY="39dp"
        tools:ignore="MissingConstraints"
        android:contentDescription="@string/jkrjg" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kfkld"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="311dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_500_400_3_4_1_1_3_4_2_2_3"
        tools:layout_editor_absoluteX="2dp"
        tools:layout_editor_absoluteY="333dp"
        tools:ignore="MissingConstraints" />
</androidx.constraintlayout.widget.ConstraintLayout>