<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".MainActivity2" >

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="189dp"
        android:layout_height="29dp"
        android:layout_marginTop="8dp"
        android:background="#333333"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:layout_editor_absoluteX="-3dp"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="23dp"
            android:layout_height="match_parent"
            android:translationX="10dp"
            app:srcCompat="@mipmap/ic_cesar"
            android:contentDescription="@string/jjyjy" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/hyr"
            android:translationX="15dp"
            android:translationY="3dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="189dp"
        android:layout_height="29dp"
        android:background="#333333"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="-3dp"
        tools:layout_editor_absoluteY="27dp"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="26dp"
            android:layout_height="match_parent"
            android:translationX="10dp"
            app:srcCompat="@mipmap/ic_borsch"
            android:contentDescription="@string/jyj" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_borsch"
            android:translationX="15dp"
            android:translationY="3dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="189dp"
        android:layout_height="29dp"
        android:layout_marginTop="8dp"
        android:background="#333333"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
        tools:layout_editor_absoluteX="-3dp"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/imageView10"
            android:layout_width="26dp"
            android:layout_height="match_parent"
            android:translationX="10dp"
            app:srcCompat="@mipmap/ic_spagetti"
            android:contentDescription="@string/lmll" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/jyjyj"
            android:translationX="15dp"
            android:translationY="3dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="189dp"
        android:layout_height="29dp"
        android:layout_marginTop="8dp"
        android:background="#333333"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
        tools:layout_editor_absoluteX="-2dp"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="24dp"
            android:layout_height="match_parent"
            android:translationX="10dp"
            app:srcCompat="@mipmap/ic_milkshake"
            android:contentDescription="@string/sryvh" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/mg"
            android:translationX="15dp"
            android:translationY="3dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="clip_horizontal|center_horizontal"
        android:text="@string/_10_09"
        android:translationX="65dp"
        tools:layout_editor_absoluteX="65dp"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="17dp"
        android:layout_height="17dp"
        app:srcCompat="@android:drawable/ic_menu_close_clear_cancel"
        tools:layout_editor_absoluteX="7dp"
        tools:layout_editor_absoluteY="2dp"
        tools:ignore="MissingConstraints"
        android:contentDescription="@string/ukukk" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="189dp"
        android:layout_height="29dp"
        android:layout_marginTop="8dp"
        android:background="#333333"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        tools:layout_editor_absoluteX="-3dp"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="23dp"
            android:layout_height="match_parent"
            android:translationX="10dp"
            app:srcCompat="@mipmap/ic_blinchik"
            android:contentDescription="@string/uukuk" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tht"
            android:translationX="15dp"
            android:translationY="3dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>