<?xml version="1.0" encoding="utf-8"?>
<androidx.wear.widget.BoxInsetLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/box_inset_layout_padding"
    tools:context=".MainActivity"
    tools:deviceIds="wear">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#000000">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="78dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/ukuk"
            android:src="@mipmap/logo"
            android:translationY="23dp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:text="@string/cookbook"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="normal"
            android:translationY="5dp" />

        <Button
            android:id="@+id/button"
            android:layout_width="187dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:backgroundTint="#FFB300"
            android:text="@string/next"
            android:textColor="#000000"
            android:translationY="110dp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="clip_horizontal|center_horizontal"
            android:text="@string/_10_09"
            android:translationX="65dp" />
    </FrameLayout>

</androidx.wear.widget.BoxInsetLayout>